Minor source cleanup
- Remove temporary DS_Store files.
- Apply consistent whitespace formatting to HTML files (indent by 2 spaces).

--- a/Help.html
+++ b/Help.html
@@ -1,55 +1,65 @@
 ﻿<!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>MaterialX - Getting Help</title>
-    
-    <link rel="icon" href="faviconMX.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="style/rst.css" type="text/css">
-    <link rel="stylesheet" href="style/default.css" type="text/css">
-    <link rel="stylesheet" href="style/flavor.css" type="text/css">
-    <link rel="stylesheet" href="style/renderman-university.css" type="text/css">
-    <style>
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <title>MaterialX - Getting Help</title>
+
+  <link rel="icon" href="faviconMX.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style/rst.css" type="text/css">
+  <link rel="stylesheet" href="style/default.css" type="text/css">
+  <link rel="stylesheet" href="style/flavor.css" type="text/css">
+  <link rel="stylesheet" href="style/renderman-university.css" type="text/css">
+  <style>
     #mainContentContainer {
-        left: 15px;
-        margin-left: 255px;
+      left: 15px;
+      margin-left: 255px;
     }
+
     ul.creatorFooterNav {
-        margin-left: 250px;
+      margin-left: 250px;
     }
+
     .navigation {
-        background-color: #272727;
-        margin-top: 10px;
-        margin-left: 10px;
+      background-color: #272727;
+      margin-top: 10px;
+      margin-left: 10px;
     }
+
     .footer-Confluence {
-        text-align: center;
-        margin-top: 15px;
+      text-align: center;
+      margin-top: 15px;
     }
-    .footer-Confluence hr.footer {
+
+      .footer-Confluence hr.footer {
         display: block;
         margin-left: -10px;
         width: 100%;
-    }
-    .footer-Confluence img {
+      }
+
+      .footer-Confluence img {
         margin-bottom: 0;
         max-width: none;
-    }
+      }
+
     .copyrightFooter {
-        font-size: 9px;
-        margin-top: 25px;
-        text-align: center;
-        float: none;
+      font-size: 9px;
+      margin-top: 25px;
+      text-align: center;
+      float: none;
     }
-    .copyrightFooter a {
-	color: #666666;
-    }
-    .copyrightFooter a:hover {
-	color: #fff;
-    }
+
+      .copyrightFooter a {
+        color: #666666;
+      }
+
+        .copyrightFooter a:hover {
+          color: #fff;
+        }
+
     table.warningMacro, table.noteMacro {
-        margin: 20px 0 20px 0;
+      margin: 20px 0 20px 0;
     }
-    </style>
+  </style>
 </head>
 <body>
 
@@ -57,11 +67,11 @@
     <br>
     <div class="quickLinks">
       <div>
-	<a href="index.html"><img alt="<MaterialX Logo>" src="images/MaterialXLogoSmallA.png"></a>
+        <a href="index.html"><img alt="<MaterialX Logo>" src="images/MaterialXLogoSmallA.png"></a>
       </div>
       <ul>
-	<li>
-	  <a href="Specification.html">Specification</a>
+        <li>
+          <a href="Specification.html">Specification</a>
           <ul>
             <li>
               <a href="assets/MaterialX.v1.38.Spec.pdf">MaterialX Spec PDF (v1.38)</a>
@@ -77,117 +87,117 @@
               <a href="assets/MaterialX.v1.38.Supplement.pdf">Supplemental Notes PDF</a>
             </li>
           </ul>
-	  <ul>
-	    <li>
-	      <a href="Specification.html#RevisionHistory">Specification Revision History</a>
-	    </li>
-	  </ul>
-	</li>
+          <ul>
+            <li>
+              <a href="Specification.html#RevisionHistory">Specification Revision History</a>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul>
-	<li>
-	  Rendering and Tools
-	  <ul>
-	    <li>
-	      <a href="ShaderGen.html#ShaderGen">ShaderGen</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="ShaderGen.html#Viewer">MaterialX Viewer</a>
-	    </li>
-	  </ul>
-	</li>
+        <li>
+          Rendering and Tools
+          <ul>
+            <li>
+              <a href="ShaderGen.html#ShaderGen">ShaderGen</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ShaderGen.html#Viewer">MaterialX Viewer</a>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul>
-	<li>
-	  Support
-	  <ul>
-	    <li>
-	      <a href="SampleFiles.html">Example MaterialX Files</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="FAQ.html">Frequently-Asked Questions</a>
-	    </li>
-	  </ul>
-	</li>
+        <li>
+          Support
+          <ul>
+            <li>
+              <a href="SampleFiles.html">Example MaterialX Files</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="FAQ.html">Frequently-Asked Questions</a>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul>
-	<li>
-	  <a href="DeveloperReference.html">Developer Reference</a>
-	  <ul>
-	    <li>
-	      <a href="docs/api/index.html">Developer Guide</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/source/MaterialXTest">Test Suite Examples</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/python/Scripts">Python Code Examples</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="DiscForum.html">Discussion Forums</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="LogoImages.html">Official Logo Image Files</a>
-	    </li>
-	  </ul>
-	</li>
+        <li>
+          <a href="DeveloperReference.html">Developer Reference</a>
+          <ul>
+            <li>
+              <a href="docs/api/index.html">Developer Guide</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/source/MaterialXTest">Test Suite Examples</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/python/Scripts">Python Code Examples</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="DiscForum.html">Discussion Forums</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="LogoImages.html">Official Logo Image Files</a>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul>
-	<li>
-	  <a href="ThirdPartySupport.html">Third-Party MaterialX Support</a>
-	  <ul>
-	    <li>
-	      <a href="ThirdPartySupport.html#Shaders-OSL">Standard Node OSL Shaders</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="ThirdPartySupport.html#Substance">Substance Designer Plugin</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="ThirdPartySupport.html#Arnold">Arnold MaterialX Operator</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="ThirdPartySupport.html#USDMaterialX">USD + MaterialX (Pixar)</a>
-	    </li>
-	  </ul>
-	</li>
+        <li>
+          <a href="ThirdPartySupport.html">Third-Party MaterialX Support</a>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#Shaders-OSL">Standard Node OSL Shaders</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#Substance">Substance Designer Plugin</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#Arnold">Arnold MaterialX Operator</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#USDMaterialX">USD + MaterialX (Pixar)</a>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul>
-	<li>
-	  <a href="Contributing.html">Contributing to MaterialX</a>
-	  <ul>
-	    <li>
-	      <a href="Contributing.html#HowTo">How To Contribute</a>
-	    </li>
-	  </ul>
-	  <ul>
-	    <li>
-	      <a href="Contributing.html#Contributors">Current Contributors</a>
-	    </li>
-	  </ul>
-	</li>
+        <li>
+          <a href="Contributing.html">Contributing to MaterialX</a>
+          <ul>
+            <li>
+              <a href="Contributing.html#HowTo">How To Contribute</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Contributing.html#Contributors">Current Contributors</a>
+            </li>
+          </ul>
+        </li>
       </ul>
       <ul>
-	<li>
-	  <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE">License</a>
-	</li>
+        <li>
+          <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE">License</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -195,70 +205,70 @@
   <div class="document">
     <h1 class="title">
       <span id="title-text">
-	MaterialX
+        MaterialX
       </span>
     </h1>
 
     <div id="mainContentContainer">
       <div class="fullWidth headerColor">
-	<div class="center">
-	  <div id="mainSiteNavigation">
-	    <ul class="creatorMainNav floatRight" id="menu">
-	      <li class="">
-		<a href="index.html">Home</a>
-	      </li>
-	      <li class="">
-		<a target="_blank" href="docs/api/index.html">Developer Guide</a>
-	      </li>
-	      <li class="">
-		<a target="_blank" href="Specification.html">Specification</a>
-	      </li>
-	      <li class="">
-		<a href="Help.html">Help</a>
-	      </li>
-	      <li class="">
-	        <a class="blueButton" style="font-size:14px" href="https://github.com/AcademySoftwareFoundation/MaterialX">GitHub</a>
-	      </li>
-	      <a class="iconButton" href="https://twitter.com/MaterialXCG" style="float:right">
-		<img src="images/Twitter_Logo_Gray_sm.png" width=20 height=20>
-	      </a>
-	    </ul>
-	  </div>
-	</div>
+        <div class="center">
+          <div id="mainSiteNavigation">
+            <ul class="creatorMainNav floatRight" id="menu">
+              <li class="">
+                <a href="index.html">Home</a>
+              </li>
+              <li class="">
+                <a target="_blank" href="docs/api/index.html">Developer Guide</a>
+              </li>
+              <li class="">
+                <a target="_blank" href="Specification.html">Specification</a>
+              </li>
+              <li class="">
+                <a href="Help.html">Help</a>
+              </li>
+              <li class="">
+                <a class="blueButton" style="font-size:14px" href="https://github.com/AcademySoftwareFoundation/MaterialX">GitHub</a>
+              </li>
+              <a class="iconButton" href="https://twitter.com/MaterialXCG" style="float:right">
+                <img src="images/Twitter_Logo_Gray_sm.png" width=20 height=20>
+              </a>
+            </ul>
+          </div>
+        </div>
       </div>
 
-<!-- Page Title ---------------------------------------------------------------------- -->
+      <!-- Page Title ---------------------------------------------------------------------- -->
       <div class="clearBoth"></div>
       <h1 class="articleContentTitle">Getting Help With MaterialX</h1>
       <div class="clearBoth"></div>
       <hr>
-<!-- --------------------------------------------------------------------------------- -->
+      <!-- --------------------------------------------------------------------------------- -->
 
       <div class="clearBoth"></div>
-	<div class="coursewareBackground">
-	  <div class="topicLeftData-MainData">
+      <div class="coursewareBackground">
+        <div class="topicLeftData-MainData">
 
-<!-- Page Content -------------------------------------------------------------------- -->
+          <!-- Page Content -------------------------------------------------------------------- -->
 
-<h2><strong>Need help understanding certain concepts in MaterialX?</strong></h2>
-<p>
-The definitive resource for MaterialX concepts is the current
-<a href="assets/MaterialX.v1.38.Spec.pdf">MaterialX Specification document (pdf)</a>.
-</p>
-<p>Here are some additional resources you may find helpful:</p>
-<ul>
-  <li><a href="FAQ.html">MaterialX Frequently-Asked Questions</a></li>
-  <li><a href="docs/api/index.html">MaterialX Developer Guide</a></li>
-  <li><a href="SampleFiles.html">Sample MaterialX document files</a></li>
-  <li><a href="http://academysoftwarefdn.slack.com/">#MaterialX Channel on the ASWF Slack</a></li>
-  <li><a href="https://groups.google.com/forum/#!forum/materialx">MaterialX Discussion Forum (Google Groups)</a></li>
-</ul>
+          <h2><strong>Need help understanding certain concepts in MaterialX?</strong></h2>
+          <p>
+            The definitive resource for MaterialX concepts is the current
+            <a href="assets/MaterialX.v1.38.Spec.pdf">MaterialX Specification document (pdf)</a>.
+          </p>
+          <p>Here are some additional resources you may find helpful:</p>
+          <ul>
+            <li><a href="FAQ.html">MaterialX Frequently-Asked Questions</a></li>
+            <li><a href="docs/api/index.html">MaterialX Developer Guide</a></li>
+            <li><a href="SampleFiles.html">Sample MaterialX document files</a></li>
+            <li><a href="http://academysoftwarefdn.slack.com/">#MaterialX Channel on the ASWF Slack</a></li>
+            <li><a href="https://groups.google.com/forum/#!forum/materialx">MaterialX Discussion Forum (Google Groups)</a></li>
+          </ul>
 
-<!-- --------------------------------------------------------------------------------- -->
+          <!-- --------------------------------------------------------------------------------- -->
 
-	</div>
+        </div>
       </div>
-    </div> 
+    </div>
 
     <div class="clearBoth"></div>
     <div class="center">
@@ -268,18 +278,19 @@ The definitive resource for MaterialX concepts is the current
     <div class="clearBoth"></div>
     <div class="center">
       <div class="copyrightFooter">
-	<p>
-	<a href="" style="color: #666666">TERMS OF USE</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="" style="color: #666666">PRIVACY POLICY</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="" style="color: #666666">LEGAL NOTICES</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="" style="color: #666666">CHILDREN’S ONLINE PRIVACY POLICY</a>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="" style="color: #666666">YOUR CALIFORNIA PRIVACY POLICY</a>
+        <p>
+          <a href="" style="color: #666666">TERMS OF USE</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="" style="color: #666666">PRIVACY POLICY</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="" style="color: #666666">LEGAL NOTICES</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="" style="color: #666666">CHILDREN’S ONLINE PRIVACY POLICY</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="" style="color: #666666">YOUR CALIFORNIA PRIVACY POLICY</a>
       </div>
     </div>
   </div>
 
-</body></html>
+</body>
+</html>
