--- a/SampleFiles.html
+++ b/SampleFiles.html
@@ -251,127 +251,36 @@
           <!-- Page Content -------------------------------------------------------------------- -->
 
           <p>
-            The MaterialX distribution includes a number of
-            <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples">example MaterialX files</a> demonstrating MaterialX
-            <a href="#SyntaxExamples">XML syntax</a> and sample
-            materials based on the <a href="#StandardSurface">StandardSurface</a> or
-            <a href="#UsdPreviewSurface">UsdPreviewSurface</a> shaders.
+            The MaterialX distribution includes libraries of example materials based on the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Standard Surface</a>, <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface</a>, and <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">glTF PBR</a> shading models, as well as an extensive <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/TestSuite">Test Suite</a> of examples that leverage each feature in the MaterialX standard.
           </p>
 
-          <h2 id="SyntaxExamples"><strong>Syntax Examples</strong></h2>
-
-          <h4 id="NodegraphExamples"><strong>Nodegraph Examples</strong></h4>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/NodeGraphs.mtlx">NodeGraphs.mtlx</a>
-              <p>Defines 2 nodegraphs:</p>
-              <ul>
-                <li>"nodegraph1" = Basic image access (Example 1 from the Nodes section of the Spec)</li>
-                <li>"nodegraph2" = A full nodegraph with tokens</li>
-              </ul>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/CustomNode.mtlx">CustomNode.mtlx</a>
-              <p>Defines a custom node using a nodegraph, then uses that node in another nodegraph.</p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/MultiOutput.mtlx">MultiOutput.mtlx</a>
-              <p>Declares a node with multiple outputs and uses it in a nodegraph.</p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/SubGraphs.mtlx">SubGraphs.mtlx</a>
-              <p>
-                Defines a "checker" custom node using a nodegraph, uses that to define another
-                "color_checker" custom node, then uses that to multiply an image by a two-color
-                checkerboard.
-              </p>
-            </li>
-          </ul>
-
-          <h4 id="MaterialExamples"><strong>Material Examples</strong></h4>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/SimpleSrf.mtlx">SimpleSrf.mtlx</a>
-              <p>A nodedef for a "simple_srf" shader, with output type "surfaceshader".</p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/PaintMaterials.mtlx">PaintMaterials.mtlx</a>
-              <p>
-                Defines a "paint_flat" material, then defines "paint_semigloss" and
-                "paint_gloss" materials which inherit from "paint_flat".
-                Uses an XInclude to reference "SimpleSrf.mtlx".
-              </p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/GeomInfos.mtlx">GeomInfos.mtlx</a>
-              <p>Example declarations of collections and geominfos.</p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/MaterialBasic.mtlx">MaterialBasic.mtlx</a>
-              <p>Declares two shader nodes, and two materials using them.</p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/PreShaderComposite.mtlx">PreShaderComposite.mtlx</a>
-              <p>
-                Example of pre-shade blending of surface material properties.
-                (Example 2 from the Materials section of the Spec)
-              </p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/PostShaderComposite.mtlx">PostShaderComposite.mtlx</a>
-              <p>
-                Example of post-shade blending of surface material properties.
-                (Example 3 from the Materials section of the Spec)
-              </p>
-            </li>
-          </ul>
-
-          <h4 id="LookExamples"><strong>Look Examples</strong></h4>
-          <ul>
-            <li>
-              <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/resources/Materials/Examples/Syntax/Looks.mtlx">Looks.mtlx</a>
-              <p>
-                A fairly complete example file, defining two shader nodes, five materials,
-                several collections, a variantset with three variations, an asset light,
-                a propertyset, and two looks assigning various combinations of the above as
-                well as a few standalone properties.
-              </p>
-            </li>
-          </ul>
-
-          <h2 id="StandardSurface"><strong>Example StandardSurface Materials</strong></h2>
           <p>
-            Sample materials in the
-            <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">StandardSurface Examples</a>
-            folder in the MaterialX Distribution
-            include: brass_tiled, carpaint, chrome, copper, default, emission, glass, gold,
-            greysphere, jade, marble_solid, plastic, sheen, velvet and wood_tiled.  Also included are example looks based on brass_tiled and wood_tiled, as well as a
-            greysphere_calibration material used to place a calibration color ring on the
-            greysphere material for the ShaderBall object.
+            Additionally, AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>, providing a wide variety of MaterialX examples under a Creative Commons license.
           </p>
 
-          <h2 id="UsdPreviewSurface"><strong>Example UsdPreviewSurface Materials</strong></h2>
+          <h2 id="StandardSurface"><strong>Standard Surface Examples</strong></h2>
           <p>
-            Sample materials in the
-            <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface Examples</a>
-            folder in the MaterialX Distribution
-            include: brass_tiled, default, glass, gold and plastic.
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Materials/Examples/StandardSurface</a> folder of the MaterialX distribution provides examples of uniform, procedural, and textured materials based on the Standard Surface shading model, which was originally developed by Autodesk.  See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the graph definition of this shading model and others.
+          </p>
+
+          <h2 id="UsdPreviewSurface"><strong>UsdPreviewSurface Examples</strong></h2>
+          <p>
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">Materials/Examples/UsdPreviewSurface</a> folder of the MaterialX distribution provides examples of uniform and textured materials based on the UsdPreviewSurface shading model, which was originally developed by Pixar.  See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the graph definition of this shading model and others.
+          </p>
+
+          <h2 id="glTF"><strong>glTF PBR Examples</strong></h2>
+          <p>
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">Materials/Examples/GltfPbr</a> folder of the MaterialX distribution provides a simple material example based on the glTF PBR shading model, which was originally developed by Khronos.  See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the graph definition of this shading model and others.
+          </p>
+
+          <h2 id="TestSuite"><strong>Test Suite Examples</strong></h2>
+          <p>
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/TestSuite">Materials/TestSuite</a> folder of the MaterialX distribution provides example materials that leverage each node and feature in the MaterialX standard.
+          </p>
+
+          <h2 id="AMD"><strong>AMD GPUOpen MaterialX Library</strong></h2>
+          <p>
+            AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>, providing a wide variety of MaterialX examples under a Creative Commons license.  The library is well-organized and searchable, with support for real-time web preview and contributions from the community.
           </p>
 
           <!-- --------------------------------------------------------------------------------- -->
