Refinements based on feedback

--- a/SampleFiles.html
+++ b/SampleFiles.html
@@ -250,37 +250,27 @@
 
           <!-- Page Content -------------------------------------------------------------------- -->
 
+          <h2><strong>Shading Model Examples</strong></h2>
           <p>
-            The MaterialX distribution includes libraries of example materials based on the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Standard Surface</a>, <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface</a>, and <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">glTF PBR</a> shading models, as well as an extensive <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/TestSuite">Test Suite</a> of examples that leverage each feature in the MaterialX standard.
+            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples">Materials/Examples</a> folder of the MaterialX distribution provides examples of uniform, procedural, and textured materials based on a variety of shading models:
+          </p>
+          <ul>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Standard Surface</a>, a shading model developed by Autodesk.</li>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface</a>, a shading model developed by Pixar.</li>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">glTF PBR</a>, a shading model developed by Khronos.</li>
+          </ul>
+          <p>
+            See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the BSDF graph definitions of each of these shading models.
           </p>
 
-          <p>
-            Additionally, AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>, providing a wide variety of MaterialX examples under a Creative Commons license.
-          </p>
-
-          <h2 id="StandardSurface"><strong>Standard Surface Examples</strong></h2>
-          <p>
-            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/StandardSurface">Materials/Examples/StandardSurface</a> folder of the MaterialX distribution provides examples of uniform, procedural, and textured materials based on the Standard Surface shading model, which was originally developed by Autodesk.  See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the graph definition of this shading model and others.
-          </p>
-
-          <h2 id="UsdPreviewSurface"><strong>UsdPreviewSurface Examples</strong></h2>
-          <p>
-            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">Materials/Examples/UsdPreviewSurface</a> folder of the MaterialX distribution provides examples of uniform and textured materials based on the UsdPreviewSurface shading model, which was originally developed by Pixar.  See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the graph definition of this shading model and others.
-          </p>
-
-          <h2 id="glTF"><strong>glTF PBR Examples</strong></h2>
-          <p>
-            The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">Materials/Examples/GltfPbr</a> folder of the MaterialX distribution provides a simple material example based on the glTF PBR shading model, which was originally developed by Khronos.  See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">librares/bxdf</a> folder for the graph definition of this shading model and others.
-          </p>
-
-          <h2 id="TestSuite"><strong>Test Suite Examples</strong></h2>
+          <h2><strong>Test Suite Examples</strong></h2>
           <p>
             The <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/TestSuite">Materials/TestSuite</a> folder of the MaterialX distribution provides example materials that leverage each node and feature in the MaterialX standard.
           </p>
 
-          <h2 id="AMD"><strong>AMD GPUOpen MaterialX Library</strong></h2>
+          <h2><strong>AMD GPUOpen MaterialX Library</strong></h2>
           <p>
-            AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>, providing a wide variety of MaterialX examples under a Creative Commons license.  The library is well-organized and searchable, with support for real-time web preview and contributions from the community.
+            AMD maintains the <a href="https://matlib.gpuopen.com/main/materials/all">GPUOpen MaterialX Library</a>, providing a wide variety of MaterialX examples under a Creative Commons license.  The library is well-organized and searchable, with support for real-time preview, web API integration, and contributions from the community.
           </p>
 
           <!-- --------------------------------------------------------------------------------- -->
