Update CLA documentation
This changelist updates CLA documentation from Lucasfilm to ASWF conventions.

--- a/Contributing.html
+++ b/Contributing.html
@@ -184,7 +184,7 @@
           <a href="Contributing.html">Contributing to MaterialX</a>
           <ul>
             <li>
-              <a href="Contributing.html#HowTo">How To Contribute</a>
+              <a href="Contributing.html#CLA">Contributor License Agreement</a>
             </li>
           </ul>
           <ul>
@@ -250,46 +250,21 @@
 
           <!-- Page Content -------------------------------------------------------------------- -->
 
-          <div class="toc-macro rbtoc1493707654934">
-            <ul class="toc-indentation">
-              <li><a href="#HowTo">How to Contribute</a></li>
-              <li><a href="#Contributors">MaterialX Authors, Developers and Contributors</a></li>
-            </ul>
-          </div>
-
+          <h2 id="CLA"><strong>Contributor License Agreement</strong></h2>
+          <p>
+            To contribute to MaterialX, you must sign a Contributor License Agreement through the <i>EasyCLA</i> system, which is integrated with GitHub as a pull request check.
+          </p>
           <br>
-          <h2 id="HowTo"><strong>How to Contribute</strong></h2>
-          <h3>Contributor License Agreement</h3>
           <p>
-            Before contributing code to MaterialX, we ask that you sign a Contributor License Agreement
-            (CLA).  There are two possible CLAs available for download:
-            <ol>
-              <li><a href="assets/Lucasfilm-MaterialX_CLA-Corp.pdf">Lucasfilm-MaterialX_CLA-Corp.pdf</a>: please sign this one for corporate use</li>
-              <li><a href="assets/Lucasfilm-MaterialX_CLA-Individual.pdf">Lucasfilm-MaterialX_CLA-Individual.pdf</a>: please sign this one if you're an individual contributor</li>
-            </ol>
-          <p>&nbsp;</p>
-          <p>
-            Once your CLA is signed, send it to <a href="mailto:contributors@materialx.org">contributors@materialx.org</a>
-            (please include your GitHub username) and wait for confirmation that we've received
-            it.  After that, you can submit pull requests.
+            Prior to submitting a pull request, you can sign the form through <a href="https://contributor.easycla.lfx.linuxfoundation.org/#/cla/project/68fa91fe-51fe-41ac-a21d-e0a0bf688a53/user/564e571e-12d7-4857-abd4-898939accdd7">this link</a>. If you submit a pull request before the form is signed, the EasyCLA check will fail with a red <i>NOT COVERED</i> message, and you'll have another opportunity to sign the form through the provided link.
           </p>
-          <p>&nbsp;</p>
-
-          <h3>Contribution Workflow</h3>
+          <ul>
+            <li>If you are an individual writing the code on your own time and you're sure you are the sole owner of any intellectual property you contribute, you can sign the CLA as an Individual Contributor.</li>
+            <li>If you are writing the code as part of your job, or if your employer retains ownership to intellectual property you create, then your company's legal affairs representatives should sign a Corporate Contributor License Agreement.  If your company already has a signed CCLA on file, ask your local CLA manager to add you to your company's approved list.</li>
+          </ul>
           <p>
-            Before you begin working on a bug fix or new feature, post an issue on GitHub to let folks know
-            about the feature or bug that you found, and mention that you intend to work on it.  That way,
-            if someone else is working on a similar project, you can collaborate, or you can get early
-            feedback which can sometimes save time.
+            The MaterialX CLAs are the standard forms used by Linux Foundation projects and <a href="https://github.com/AcademySoftwareFoundation/tac/blob/main/process/contributing.md#contributor-license-agreement-cla">recommended by the ASWF TAC</a>.
           </p>
-          <p>&nbsp;</p>
-          <p>When you do begin your work, create a fork into your own private repository and work from there.</p>
-          <p>&nbsp;</p>
-          <p>
-            Full instructions on how to contribute may be found in the CONTRIBUTE.md file at the root
-            of the materialx git repository.
-          </p>
-          <br>&nbsp;</br>
 
           <br>
           <h2 id="Contributors"><strong>MaterialX Authors, Developers and Contributors</strong></h2>
