--- a/DeveloperReference.html
+++ b/DeveloperReference.html
@@ -184,7 +184,7 @@
           <a href="Contributing.html">Contributing to MaterialX</a>
           <ul>
             <li>
-              <a href="Contributing.html#HowTo">How To Contribute</a>
+              <a href="Contributing.html#CLA">Contributor License Agreement</a>
             </li>
           </ul>
           <ul>
