--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -184,7 +184,7 @@
           <a href="Contributing.html">Contributing to MaterialX</a>
           <ul>
             <li>
-              <a href="Contributing.html#HowTo">How To Contribute</a>
+              <a href="Contributing.html#CLA">Contributor License Agreement</a>
             </li>
           </ul>
           <ul>
