--- a/ShaderGen.html
+++ b/ShaderGen.html
@@ -279,8 +279,9 @@
             in the distribution, as are a number of example materials based on the
             <a href="https://github.com/Autodesk/standard-surface/blob/master/reference/standard_surface.mtlx">StandardSurface</a>
             shader.
-            
-            MaterialX can also be compiled to JavaScript for Web usage. ShaderGen can generate GLSL ES shaders WebGL rendering. 
+          </p>
+          <p>
+            MaterialX can also be compiled to JavaScript for Web usage. ShaderGen can generate GLSL ES shaders for WebGL rendering. 
             An example MaterialX Web Viewer is hosted <a href="https://academysoftwarefoundation.github.io/MaterialX/">here</a>  
           </p>
 
