Add link to example web viewer (#4)

--- a/ShaderGen.html
+++ b/ShaderGen.html
@@ -280,6 +280,10 @@
             <a href="https://github.com/Autodesk/standard-surface/blob/master/reference/standard_surface.mtlx">StandardSurface</a>
             shader.
           </p>
+          <p>
+            MaterialX can also be compiled to JavaScript for Web usage. ShaderGen can generate GLSL ES shaders for WebGL rendering. 
+            An example MaterialX Web Viewer is hosted <a href="https://academysoftwarefoundation.github.io/MaterialX/">here</a>  
+          </p>
 
           <!-- --------------------------------------------------------------------------------- -->
 
