--- a/DiscForum.html
+++ b/DiscForum.html
@@ -159,22 +159,32 @@
           <a href="ThirdPartySupport.html">Third-Party MaterialX Support</a>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Shaders-OSL">Standard Node OSL Shaders</a>
+              <a href="ThirdPartySupport.html#USD">Pixar USD</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Substance">Substance Designer Plugin</a>
+              <a href="ThirdPartySupport.html#Houdini">SideFX Houdini</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#Arnold">Arnold MaterialX Operator</a>
+              <a href="ThirdPartySupport.html#Clarisse">Isotropix Clarisse</a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="ThirdPartySupport.html#USDMaterialX">USD + MaterialX (Pixar)</a>
+              <a href="ThirdPartySupport.html#Maya">Autodesk Maya</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#RenderMan">Pixar RenderMan</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="ThirdPartySupport.html#Arnold">Autodesk Arnold</a>
             </li>
           </ul>
         </li>
