Updates for MaterialX 1.38.5
- Add 1.38.5 announcement.
- Add Open Chess Set render.
- Remove unused files.

--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
           <p style="margin-left: 0px">
 
           <p style="margin-bottom: 0px; padding-bottom: 0px">
+            <img alt="<Open Chess Set Image>" src="images/OpenChessSet_Arnold_01.png" style="margin: 0; padding-bottom: 0px">
+            <div class="smtextright">The Open Chess Set (authored by Moeen and Mujtaba Sayed, contributed to MaterialX by SideFX, rendered in Arnold for Maya)</div>
           </p>
 
           <!-- Page Content -------------------------------------------------------------------- -->
@@ -276,7 +278,7 @@
             shading and processing nodes with a precise mechanism for functional extensibility.
           </p>
 
-          <p>The MaterialX library, now at release v1.38.4, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
+          <p>The MaterialX library, now at release v1.38.5, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
 
           <br>
           <h2><strong>Announcements</strong></h2>
@@ -284,8 +286,21 @@
             <div>
               <p>
 
+                <em>Update July 9, 2022:</em>
+                <br><strong>MaterialX Library v1.38.5 has been released</strong>.
+                This release adds support for Vulkan GLSL generation,
+                improved real-time refraction,
+                the new Open Chess Set example from SideFX.
+                and more.
+                Please see the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.5">MaterialX Version 1.38.5 release page</a>
+                on the MaterialX Github for further details,
+                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
+                to download the latest library source code, documentation and examples.
+                <br><br>
+
                 <em>Update Apr 6, 2022:</em>
-                <br><strong>MaterialX Library v1.38.4 has been released</strong>.
+                MaterialX Library v1.38.4 has been released.
                 This release adds a
                 <a href="https://academysoftwarefoundation.github.io/MaterialX/">Web Viewer</a> example based on
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/javascript">MaterialX JavaScript</a>,
@@ -295,9 +310,7 @@
                 and more.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.38.4">MaterialX Version 1.38.4 release page</a>
-                on the MaterialX Github for further details,
-                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
-                to download the latest library source code, documentation and examples.
+                on the MaterialX Github for further details.
                 <br><br>
 
                 <em>Update Dec 14, 2021:</em>
