Add details for OSD 2022

--- a/index.html
+++ b/index.html
@@ -529,15 +529,26 @@
             <div>
 
               <p>
+                <em>August 8, 2022 - </em>
+                <a href="https://www.aswf.io/">Academy Software Foundation</a>
+                <a href="https://events.linuxfoundation.org/open-source-days/">Open Source Days 2022</a>
+                Session
+                <br>
+                <strong>New Developments in MaterialX and OSL</strong>
+                <br>
+                (<a href="assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf ">Slide Deck PDF</a>)
+                &nbsp; (Presentation Video will be posted when available)
+              </p>
+
+              <p>
                 <em>August 5, 2021 - </em>
                 <a href="https://www.aswf.io/">Academy Software Foundation</a>
-                <a href="https://events.linuxfoundation.org/open-source-days/">Open Source Days 2021</a>
-                Session
+                Open Source Days 2021 Session
                 <br>
                 <strong>MaterialX New Developments</strong>
                 <br>
                 (<a href="assets/ASWF_OSD2021_MaterialX_slides_final.pdf ">Slide Deck PDF</a>)
-                &nbsp; (Presentation Video will be posted when available)
+                &nbsp; (<a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
               </p>
 
               <p>
